# weatherust

./: .dockerignore  .env.example  .env.example.short  .env.test  BASH_ALIASES.md  CLAUDE.md  CLEANUP_DESIGN.md  CLI-COMMANDS.md  Cargo.toml  Dockerfile  Dockerfile.dockermon  Dockerfile.healthmon  Dockerfile.speedynotify  Dockerfile.updatectl  Dockerfile.updatemon  LOGGING_SETUP.md  README.md  WEBHOOK_API.md  docker-compose.logging.yml  docker-compose.yml  grafana-datasources.yml  loki-config.yml  promtail-config.yml
.github/: pull_request_template.md
.github/workflows/: build-all-services.yml  docker-dockermon.yml  docker-speedynotify.yml  docker-updatemon.yml  docker.yml
common/: Cargo.toml
common/src/: constants.rs  error.rs  executor.rs  lib.rs  metrics.rs  retry.rs  security.rs
dockermon/: Cargo.toml
dockermon/src/: executor.rs  main.rs  remote_cleanup.rs
dockermon/src/cleanup/: build_cache.rs  images.rs  logs.rs  mod.rs  networks.rs  types.rs  volumes.rs
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/development/: CLAUDE_CODE_GUIDE.md  CONTRIBUTING.md  MODERNIZATION_EXAMPLES.md  MODERNIZATION_SUMMARY.md
docs/planning/: FEATURES.md  IMPROVEMENTS_2025.md
docs/reference/: BASH_ALIASES.md
healthmon/: Cargo.toml  README.md
healthmon/src/: executor.rs  main.rs
healthmon/src/cleanup/: profiles.rs
scripts/: scaffold_feature.sh
speedynotify/: Cargo.toml
speedynotify/src/: main.rs  tests.rs
src/: main.rs  tests.rs
updatectl/: Cargo.toml  README.md
updatectl/src/: executor.rs  main.rs  remote_cleanup.rs  types.rs  updater.rs  webhook.rs
updatectl/src/checkers/: dnf.rs  mod.rs  pacman.rs
updatectl/src/cleanup/: containers.rs  layers.rs  logs.rs  mod.rs  networks.rs  types.rs  volumes.rs
updatemon/: Cargo.toml  README.md
updatemon/src/: docker.rs  executor.rs  main.rs  types.rs
updatemon/src/checkers/: apt.rs  dnf.rs  pacman.rs
