[package]
name = "weatherust"
version = "0.1.0"
edition = "2021"

[dependencies]
# networking & JSON
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# time & env
chrono = "0.4"
dotenvy = "0.15"

# CLI flags
clap = { version = "4", features = ["derive"] }
