[package]
name = "dockermon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
bollard = { version = "0.16", default-features = false, features = ["runtime-tokio"] }
common = { path = "../common" }
