[package]
name = "healthmon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
bollard = { version = "0.16" }
common = { path = "../common" }

# logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
metrics = "0.23"

[dev-dependencies]
tokio-test = "0.4"
