[package]
name = "updatectl"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"

# SSH execution (will copy from updatemon)
ssh2 = "0.9"

# Webhook server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
