[package]
name = "updatectl"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
tokio = { version = "1.41", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }

# logging & observability
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# SSH execution (will copy from updatemon)
ssh2 = "0.9"

# Docker API for cleanup operations
bollard = "0.16"
chrono = "0.4"
urlencoding = "2.1"
futures-util = "0.3"

# Webhook server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
axum-test = "15"
tokio-test = "0.4"
