[package]
name = "updatemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared utilities from workspace
common = { path = "../common" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
anyhow = "1"

# HTTP client (for Gotify, Docker registry API)
reqwest = { version = "0.12", features = ["json"] }

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
log = "0.4"
metrics = "0.23"

# SSH execution (we'll use Command with ssh binary for simplicity)
# Later could add: ssh2 = "0.9" for native SSH library

# Regex for parsing output
regex = "1"

# URL encoding for webhook URLs
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
